# chatterbox-project

./: .gitignore  README.md  main.py  pyproject.toml
how_it_works/: analyzing_postgresql_query_plans.toml  how_postgresql_works.toml  n_plus_one_query_problem.toml  query_plans_and_indexes.toml  transactions_and_isolation_levels.toml
order_system_dev_log/: 001_order_system_dev_log.toml
ppt_automation/: generate_presentation.py  llm_review_template.example.md  patch_pptx.py  presentation.example.toml  presentation.toml  setup_and_patch.cmd
tts_experiments/: main.py
